# queuelab

./: .code-review-graphignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  QueueLab_joeysHub.code-workspace  appspec.yml  buildspec.yml  devcfg.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prodcfg.txt
.development-docs/: brd-queuelab.md  epic-plan-queuelab.md  tdd-queuelab.md  ui-ux-style-guide.md
.development-docs/how-i-work-pipeline/: epic-plan-how-i-work-pipeline.md
.development-docs/how-it-works-stack/: epic-plan-how-it-works-stack.md
.development-docs/queuelab-brand-portfolio/: epic-plan-queuelab-brand-portfolio.md
.development-docs/sparkline-trend-fix/: epic-plan-sparkline-trend-fix.md
.development-docs/stack-screenshot/: epic-plan-stack-screenshot.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  autoscaler_main.py  config.py  dependencies.py  main.py  reaper.py
backend/app/db/: __init__.py  base.py  engine.py  prune.py
backend/app/models/: __init__.py  job.py  scaling_event.py  schemas.py
backend/app/queue/: __init__.py  client.py  protocol.py
backend/app/queue/scripts/: .gitkeep  ack.lua  claim.lua  nack.lua  reap.lua  renew.lua  requeue.lua
backend/app/realtime/: __init__.py  activity.py  broadcaster.py  connection_manager.py  durable_writer.py  metrics_tick.py  scaling_feed.py  subscriber.py
backend/app/routers/: __init__.py  architecture.py  chaos.py  config.py  jobs.py  metrics.py  realtime.py  session.py
backend/app/services/: __init__.py  activity_feed.py  architecture.py  autoscaler.py  chaos.py  docker_control.py  guardrails.py  identity.py  metrics.py  rate_limit.py  session_store.py  submission.py  validation.py
backend/app/services/scripts/: token_bucket.lua
backend/tests/: __init__.py  conftest.py  test_activity_feed.py  test_app.py  test_architecture.py  test_autoscaler.py  test_autoscaler_main.py  test_chaos.py  test_config.py  test_config_api.py  test_docker_control.py  test_durable_writer.py  test_guardrails.py  test_identity.py  test_jobs.py  test_metrics.py  test_metrics_tick.py  test_models.py  test_queue.py  test_rate_limit.py  test_realtime_activity.py  test_realtime_broadcast.py  test_realtime_scaling_feed.py  test_realtime_snapshot.py  test_reaper.py  test_session.py  test_validation.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: narrative.spec.ts
frontend/nginx/: cert-reload.sh  default.conf.template  docker-entrypoint.sh  start-cert-reload.sh
frontend/src/: .gitkeep  App.test.tsx  App.tsx  Layout.tsx  brandLogo.test.ts  index.css  main.tsx
frontend/src/components/: AsciiBar.test.tsx  AsciiBar.tsx  BracketButton.test.tsx  BracketButton.tsx  Counter.test.tsx  Counter.tsx  FeedLine.test.tsx  FeedLine.tsx  Pane.test.tsx  Pane.tsx  PaneTitle.test.tsx  PaneTitle.tsx  Prompt.test.tsx  Prompt.tsx  Scanlines.test.tsx  Scanlines.tsx  Sparkline.test.tsx  Sparkline.tsx  StatusBadge.test.tsx  StatusBadge.tsx  WorkerCell.test.tsx  WorkerCell.tsx  stateBadges.ts
frontend/src/hooks/: liveState.test.ts  liveState.ts  useArchitecture.ts  useChaos.test.tsx  useChaos.ts  useExpiringNotice.test.tsx  useExpiringNotice.ts  useLiveState.ts  useOptimisticDestroys.test.tsx  useOptimisticDestroys.ts  useSession.test.ts  useSession.ts  useSubmitJobs.test.tsx  useSubmitJobs.ts
frontend/src/lib/: api.ts  format.ts  ws.ts
frontend/src/pages/: Dashboard.tsx  HowIWork.test.tsx  HowIWork.tsx  HowItWorks.test.tsx  HowItWorks.tsx
frontend/src/panes/: ArchitecturePane.test.tsx  ArchitecturePane.tsx  FeedPane.test.tsx  FeedPane.tsx  MetricsPane.test.tsx  MetricsPane.tsx  QueueDepthPane.test.tsx  QueueDepthPane.tsx  SubmitPane.test.tsx  SubmitPane.tsx  WorkersPane.test.tsx  WorkersPane.tsx
frontend/src/test/: setup.ts
infra/: .gitignore  .gitkeep  README.md  cicd.tf  compute.tf  dns.tf  ecr.tf  instance_iam.tf  locals.tf  network.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
ops/deploy/: DEPLOY.md  certbot-entrypoint.sh  prod.env.example
scripts/: dev-stack.ps1
scripts/deploy/: application_start.sh  application_stop.sh  before_install.sh  validate_service.sh
worker/: .gitkeep  Dockerfile  pyproject.toml  simulate.py  worker.py
worker/tests/: conftest.py  test_simulate.py  test_worker.py
