[project]
name = "queuelab-backend"
version = "0.1.0"
description = "QueueLab backend — FastAPI api + autoscaler, custom Redis queue, Postgres records"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "docker>=7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers>=4.8",
    # FastAPI's TestClient (used by the app smoke tests) drives the app through httpx.
    "httpx>=0.28",
    # WebSocket client for the realtime tests. Its ASGIWebSocketTransport lets a test connect
    # to WS /ws in-process on the same event loop as the async Redis/Postgres fixtures — the
    # threaded TestClient would put that I/O on a different loop (see conftest's api_client).
    "httpx-ws>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `async def test_*` run without a per-test marker. The queue integration suite uses
# testcontainers to auto-spin a real Redis, so a Docker daemon must be available.
asyncio_mode = "auto"
