[project]
name = "queuelab-worker"
version = "0.1.0"
description = "QueueLab worker — claims and runs simulated jobs from the custom Redis queue"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

# Match the backend Ruff lint rules so both trees lint identically. (The backend's
# `src`/pytest settings are omitted here — the worker has a flat layout and no tests yet;
# they arrive with worker code in Epic 8.)
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
