[project]
name = "queuelab-worker"
version = "0.1.0"
description = "QueueLab worker — claims and runs simulated jobs from the custom Redis queue"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

# Match the backend Ruff lint rules so both trees lint identically. The worker uses a flat
# layout (simulate.py at the package root), so `src` / pytest `pythonpath` point at "." so
# `import simulate` resolves from worker/tests/.
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
