[project]
name = "queuelab-worker"
version = "0.1.0"
description = "QueueLab worker — claims and runs simulated jobs from the custom Redis queue"
requires-python = ">=3.12"
dependencies = [
    # Cap below 8.0: redis-py 8.0.0 hard-caps every blocking read at ~5s even with
    # socket_timeout=None, so the worker's 5s claim poll raises TimeoutError and the
    # worker crashes on its first idle poll. 7.4.x honors the command timeout.
    "redis>=5.2,<8",
    # pydantic + pydantic-settings back the vendored `app.config` / `app.queue` (Epic 8b):
    # the Dockerfile copies the backend queue protocol and Settings into the image, and
    # `app.queue.client` builds JobRecords and reads `app.config.settings`.
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    # The claim-loop integration test drains a batch through a real Redis (testcontainers)
    # on the async event loop, mirroring the backend suite.
    "pytest-asyncio>=0.24",
    "testcontainers>=4.8",
]

# Match the backend Ruff lint rules so both trees lint identically. The worker uses a flat
# layout (simulate.py / worker.py at the package root), so `src` / pytest `pythonpath`
# include "." so `import simulate` / `import worker` resolve. The integration test drives the
# real backend queue, which lives one directory up, so the test `pythonpath` also includes
# "../backend" — the Dockerfile vendors that same `app.queue` + `app.config` into the image.
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../backend", "."]
asyncio_mode = "auto"
